Fix initial collapse issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -94,6 +94,7 @@ ol {
 	transform: rotate(90deg);
 	transform-origin: bottom left;
 	cursor: pointer;
+	text-decoration: none;
 }
 
 .eb-toc-close {
